main/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-frontend
  labels:
    app:  main-frontend
    tier: frontend
spec:
  type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 80
  selector:
    name: main-frontend 
    tier: frontend
