main/frontend/ingress.yml
apiVersion: extension/v1beta1
kind: Ingress
metadata:
    name: frontend-ingress-node
spec:
    frontend:
      serviceName: a
